fix(liushanmen): SECONDARY cancel dead-end + FINISHED WIP honest-null cost
修1 (🔴): SECONDARY 二次加工计划"开工扣 WIP 无报工"取消死路
- startProduction 对 SECONDARY 开工即扣 secondarySourceWipId 半成品, 但若无任何
  YIELD 报工就取消, 旧逻辑导向报工撤回流 (ReportReversalService) —— 该流按报工冲销,
  无报工 = no-op, 永不还 startProduction 扣的 WIP → 计划永卡 IN_PROGRESS, WIP 孤儿。
- 新增 WipInventoryService.reverseSecondaryDeduct (deductForSecondaryPlan 的逆):
  findByIdForUpdate 行锁, available += qty / consumed -= qty, DEPLETED→AVAILABLE,
  写 REVERSE/REVERSAL 反向流水; consumed 反冲到负则 409 (不静默置 0)。
- cancelProductionPlan 用 hasYieldReports 细分: SECONDARY IN_PROGRESS 无报工 →
  同事务反冲 WIP + 直接 CANCELLED (不导向报工撤回); 有报工 → 仍走报工撤回流。
- 不变量: 取消后 SECONDARY 开工扣的 WIP 必被还、计划不卡 IN_PROGRESS。

修2 (🔴): 成品 (FINISHED) WIP 路径混合成本未做诚实 null
- upsertProducedWip 用 accumulatedCost/producedQuantity。历史 bug: 老 100kg@1000
  + 新 50kg@(labor=null,material=null) → accumulatedCost 仍 1000, produced=150 →
  unitCost=1000/150=6.67 (把未知 50kg 当 ¥0 稀释), 与半成品 applyMovingAverageIn
  已修的诚实 null 不一致。
- 加 priorPoisoned (既有行 produced>0 且 unitCost=null) + inCostUnknown (本次 out>0
  且 rollLabor/rollMaterial 都 null) 判据: 任一为真 → unitCost 诚实 null。两侧都已知
  → 正常 accumulated/produced 加权 (字节一致, 无回归)。

测试: TDD 先红 (修2 旧逻辑实测 6.6667; 修1 测试需新方法才编译)。全量
./mvnw.cmd test 7177 通过 0 失败。改写 1 个断言旧死路行为的 pre-existing 并发测试
(cancel_secondaryInProgressConsumedWip_rejected → 拆为反冲+取消 / 有报工仍拒绝)。

🔴 红线: prod 部署/迁移无关, 但属生产成本+WIP库存路径, 待 Opus 终审从 main 部署。

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>